@@ -12,7 +12,7 @@ You are a beginner:
 
 <li> How to <a href="start.htm">start</a> with <em>GeneWeb</em>.
 
-<li> See a frequently encountered <a href="problem.htm">problem</a>.
+<li> See two frequently encountered <a href="problem.htm">problems</a>.
 
 </ul>
 
