@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
             "http://www.w3.org/TR/REC-html40/loose.dtd">
-<head><title>GeneWeb - Problem</title></head>
+<head><title>GeneWeb - Problems</title></head>
 <body bgcolor="#d6bfaf">
-<h1>GeneWeb - Problem</h1>
+<h1>GeneWeb - Problems</h1>
 
-A frequently encountered problem is the following:
+Here are two frequently encountered problems with "gwd":
 
 <p>
 
@@ -12,7 +12,13 @@ You launched the <em>GeneWeb</em> daemon "gwd" and it answers normally
 as indicated in the chapter "How to start with GeneWeb", section
 "Command <a href="start.htm#Gwd">gwd</a>".
 
-<h4> Problem </h4>
+<p>
+
+Then...
+
+<h4>Attempt to connect to the network</h4>
+
+<ul><li>
 
 When you enter the address in your navigator, e.g.:
 
@@ -28,10 +34,11 @@ cannot work off line.
 <p>
 
 This problem happens with some versions of Internet Explorer.
+</ul>
 
-<h4> Solution </h4>
+<ul><li>
 
-Maybe depending on the version you have, we received from
+Maybe depending on the navigator version, we received from
 <em>GeneWeb</em> users (thank you) the following solutions:
 
 <p>
@@ -55,7 +62,26 @@ gwd.exe. For example (note the semicolons between names):
 <p>
 
 If it does not work better, we suggest you to use another navigator,
-e.g. Netscape (which is free now).
+e.g. Netscape (which is free).
+</ul>
+
+<h4>Cannot access file "start.txt"</h4>
+
+<ul><li>Another frequent problem probl&egrave;me is the message:
+"Cannot access file start.txt".</ul>
+
+<ul><li>If you use <em>GeneWeb</em> under Windows, maybe you
+uncompressed the archinve with "pkunzip". It is important to do it
+with the options "...":
+
+<pre>
+     pkunzip ... geneweb.zip
+</pre>
+
+If you did not uncompressed it like this, do it again with the good
+options.
+
+</ul>
 
 <p>
 
