@@ -12,8 +12,8 @@ Vous &ecirc;tes d&eacute;butant:
 
 <li> Comment <a href="start.htm">d&eacute;marrer</a> avec <em>GeneWeb</em>.
 
-<li> Voyez un <a href="problem.htm">probl&egrave;me</a> fr&eacute;quemment
-rencontr&eacute;.
+<li> Voyez deux <a href="problem.htm">probl&egrave;mes</a> fr&eacute;quemment
+rencontr&eacute;s.
 
 </ul>
 
