@@ -1,10 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
             "http://www.w3.org/TR/REC-html40/loose.dtd">
-<head><title>GeneWeb - Probl&egrave;me</title></head>
+<head><title>GeneWeb - Probl&egrave;mes</title></head>
 <body bgcolor="#d6bfaf">
-<h1>GeneWeb - Probl&egrave;me</h1>
+<h1>GeneWeb - Probl&egrave;mes</h1>
 
-Un probl&egrave;me fr&eacute;quent est le suivant:
+Voici deux probl&egrave;mes fr&eacute;quemment rencontr&eacute;s avec
+"gwd".
 
 <p>
 
@@ -13,7 +14,13 @@ r&eacute;pond normalement comme indiqu&eacute; dans le chapitre
 "Comment d&eacute;marrer avec GeneWeb", paragraphe "Commande <a
 href="start.htm#Gwd">gwd</a>".
 
-<h4> Probl&egrave;me </h4>
+<p>
+
+Puis...
+
+<h4>Tentative de connexion au r&eacute;seau</h4>
+
+<ul><li>
 
 Au moment d'entrer l'adresse dans votre navigateur, par exemple:
 
@@ -30,8 +37,9 @@ cela ne fonctionne pas en mode non connect&eacute;.
 
 Ce probl&egrave;me se rencontre avec certaines versions d'Internet
 Explorer.
+</ul>
 
-<h4> Solution </h4>
+<ul><li>
 
 Nous avons re&ccedil;u plusieurs r&eacute;ponses de la part des
 utilisateurs <em>GeneWeb</em> (merci). Cela d&eacute;pend peut-&ecirc;tre
@@ -50,7 +58,9 @@ menu "Affichage", "Options", "Connexion". Ensuite allez &agrave;
 "Serveur proxy" et s&eacute;lectionnez "Installation", ajouter sous
 "Exceptions" et "Ne pas utiliser le serveur proxy pour les adresses
 commen&ccedil;ant par" les adresses donn&eacute;es quand vous demarrez
-gwd.exe. Par exemple (notez les points-virgules entre les noms): <pre>
+gwd.exe. Par exemple (notez les points-virgules entre les noms):
+
+<pre>
      127.0.0.1;localhost;ordinateur
 </pre>
  </ul>
@@ -59,7 +69,26 @@ gwd.exe. Par exemple (notez les points-virgules entre les noms): <pre>
 
 Si cela ne fonctionne toujours pas, nous vous sugg&eacute;rons
 d'utiliser un autre navigateur, par exemple Netscape (lequel est
-maintenant distribu&eacute; gratuitement).
+distribu&eacute; gratuitement).
+</ul>
+
+<h4>Cannot access file "start.txt"</h4>
+
+<ul><li>Un autre probl&egrave;me fr&eacute;quent est le message:
+"Cannot access file start.txt".</ul>
+
+<ul><li>Si vous utilisez <em>GeneWeb</em> sous Windows, vous ayez
+peut-&ecirc;tre d&eacute;compress&eacute; l'archive avec "pkunzip".
+Il est important de la d&eacute;compresser avec les options "....":
+
+<pre>
+     pkunzip ... geneweb.zip
+</pre>
+
+Si vous ne l'avez pas d&eacute;compress&eacute; ainsi, recommencez, avec
+les bonnes options.
+
+</ul>
 
 <p>
 
